exports[`test Changes output on value change manipulation 1`] = `
<TextField
  autoComplete="off"
  error={null}
  id="text-field"
  inputStyle="inline"
  label="TextField"
  multiLine={false}
  name="text-field"
  placeholder=""
  query={Object {}}
  required={true}
  requiredLabel={true}
  rows={5}
  type="text"
  value="test">
  <div
    className="formGroup inline">
    <span
      className="controlNote requiredLabel">
      Required
    </span>
    <label
      className="controlLabel undefined"
      htmlFor="text-field">
      TextField
    </label>
    <div
      className="inputContainer">
      <input
        autoComplete="off"
        className="formControl"
        id="text-field"
        name="text-field"
        onChange={[Function]}
        placeholder=""
        required={true}
        type="text"
        value="UGH" />
    </div>
  </div>
</TextField>
`;

exports[`test Renders TextField with multiline without crashing 1`] = `
<div
  className="formGroup inline">
  <span
    className="controlNote requiredLabel">
    Required
  </span>
  <label
    className="controlLabel undefined"
    htmlFor="text-field">
    TextField
  </label>
  <div
    className="inputContainer">
    <textarea
      autoFocus={undefined}
      className="formControl textarea"
      disabled={undefined}
      id="text-field"
      maxLength={undefined}
      name="text-field"
      onChange={[Function]}
      pattern={undefined}
      placeholder=""
      required={true}
      rows={5}
      value="test2" />
  </div>
</div>
`;

exports[`test Renders TextField without crashing 1`] = `
<div
  className="formGroup inline">
  <span
    className="controlNote requiredLabel">
    Required
  </span>
  <label
    className="controlLabel undefined"
    htmlFor="text-field">
    TextField
  </label>
  <div
    className="inputContainer">
    <input
      autoComplete="off"
      autoFocus={undefined}
      className="formControl"
      disabled={undefined}
      id="text-field"
      maxLength={undefined}
      name="text-field"
      onChange={[Function]}
      pattern={undefined}
      placeholder=""
      required={true}
      title={undefined}
      type="text"
      value="test" />
  </div>
</div>
`;
